--- a/Client/packages.config
+++ b/Client/packages.config
@@ -2,13 +2,16 @@
 <packages>
   <package id="ControlzEx" version="4.4.0" targetFramework="net48" />
   <package id="HandyControl.Lang.ru" version="3.3.0" targetFramework="net48" />
-  <package id="HandyControls" version="3.4.2" targetFramework="net48" />
+  <package id="HandyControls" version="3.4.4" targetFramework="net48" />
   <package id="MahApps.Metro" version="2.4.9" targetFramework="net48" />
+  <package id="MaterialDesignColors" version="2.0.9" targetFramework="net48" />
+  <package id="MaterialDesignThemes" version="4.6.1" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="Notification.Wpf" version="6.1.0.5" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="6.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Net.Http.Json" version="6.0.0" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
@@ -17,4 +20,5 @@
   <package id="System.Text.Json" version="6.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="WPF-UI" version="2.0.3" targetFramework="net48" />
 </packages>
