--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -51,6 +51,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Images\logoMasterWood.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="ControlzEx, Version=4.0.0.0, Culture=neutral, PublicKeyToken=69f1c32f803d307e, processorArchitecture=MSIL">
       <HintPath>..\packages\ControlzEx.4.4.0\lib\net462\ControlzEx.dll</HintPath>
@@ -142,7 +145,9 @@
     <Compile Include="Models\Enums.cs" />
     <Compile Include="Models\Error_HTTP.cs" />
     <Compile Include="Models\MainPage.cs" />
-    <Compile Include="Models\Sheta.cs" />
+    <Compile Include="Models\RelayCommad.cs" />
+    <Compile Include="Models\Shet.cs" />
+    <Compile Include="Models\Sheta_tov.cs" />
     <Compile Include="Models\Sklad\Karta.cs" />
     <Compile Include="Models\Sklad\RashodyQueryParams.cs" />
     <Compile Include="Models\Sklad\Sklad_prihod.cs" />
@@ -152,6 +157,9 @@
     <Compile Include="Models\Sklad_rashod.cs" />
     <Compile Include="Models\Tovary.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Pages\ShetaPage.xaml.cs">
+      <DependentUpon>ShetaPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\Sklad\OstatkiPage.xaml.cs">
       <DependentUpon>OstatkiPage.xaml</DependentUpon>
     </Compile>
@@ -166,6 +174,9 @@
     </Compile>
     <Compile Include="Pages\Sklad\RashodsPage.xaml.cs">
       <DependentUpon>RashodsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\TovaryPage.xaml.cs">
+      <DependentUpon>TovaryPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControls\CategoryNavControl.xaml.cs">
       <DependentUpon>CategoryNavControl.xaml</DependentUpon>
@@ -182,11 +193,10 @@
     <Compile Include="ViewModels\OstatkiViewModel.cs" />
     <Compile Include="ViewModels\RashodViewModel.cs" />
     <Compile Include="ViewModels\RashodyViewModel.cs" />
-    <Compile Include="Windows\OstatkiWin.xaml.cs">
-      <DependentUpon>OstatkiWin.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Windows\RashodWin.xaml.cs">
-      <DependentUpon>RashodWin.xaml</DependentUpon>
+    <Compile Include="ViewModels\ShetaViewModel.cs" />
+    <Compile Include="ViewModels\TovaryViewModel.cs" />
+    <Compile Include="Windows\AuthWindow.xaml.cs">
+      <DependentUpon>AuthWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -200,6 +210,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Pages\ShetaPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\Sklad\OstatkiPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -220,6 +234,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\TovaryPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UserControls\CategoryNavControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -236,11 +254,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Windows\OstatkiWin.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Windows\RashodWin.xaml">
+    <Page Include="Windows\AuthWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -290,6 +304,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Styles\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\logoMasterWood.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\logoMasterWood.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets" Condition="Exists('..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets')" />
