--- a/Client/App.config
+++ b/Client/App.config
@@ -24,6 +24,9 @@
       <setting name="Token" serializeAs="String">
         <value />
       </setting>
+      <setting name="URL" serializeAs="String">
+        <value>http://26.187.80.25:7082/</value>
+      </setting>
     </Client.Properties.Settings>
   </userSettings>
 </configuration>
