--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -195,8 +195,12 @@
     <Compile Include="Pages\TovaryPage.xaml.cs">
       <DependentUpon>TovaryPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\UsersPage.xaml.cs">
+      <DependentUpon>UsersPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Repository\IRepository.cs" />
     <Compile Include="Repository\ProductRepository.cs" />
+    <Compile Include="Repository\UserRepository.cs" />
     <Compile Include="UserControls\CategoryNavControl.xaml.cs">
       <DependentUpon>CategoryNavControl.xaml</DependentUpon>
     </Compile>
@@ -220,6 +224,7 @@
     <Compile Include="ViewModels\ShetaViewModel.cs" />
     <Compile Include="ViewModels\ShetViewModel.cs" />
     <Compile Include="ViewModels\TovaryViewModel.cs" />
+    <Compile Include="ViewModels\UsersViewModel.cs" />
     <Compile Include="ViewModels\ZenViewModel.cs" />
     <Compile Include="Windows\AuthWindow.xaml.cs">
       <DependentUpon>AuthWindow.xaml</DependentUpon>
@@ -281,6 +286,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\TovaryPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\UsersPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
